2004-12-06  Mike Kestner  <mkestner@novell.com>

	* generator/SymbolTable.cs : add off_t as an IntPtr.

2004-12-06  Mike Kestner  <mkestner@novell.com>

	* generator/SignalHandler.cs : s/[]/Array in BaseName. [Fixes #69383]

2004-12-06  Mike Kestner  <mkestner@novell.com>

	* doc/en/*/*.xml : docs for new GValue members and size_t changes.
	* generator/SymbolTable.cs : add ssize_t and make size_t a UIntPtr
	instead of the current broken int mapping on 64 bit platforms.
	* gtkhtml/HTMLStream.custom : fix size_t related overload.
	[fixes #69574]

2004-12-03  Dan Winship  <danw@novell.com>

	* gdk/gdk-symbols.xml: alias GdkBitmap to GdkPixmap [Fixes #68824]

	* gdk/Gdk.metadata: Remove the earlier GdkBitmap hack now that
	it's aliased. Also move Gdk.Bitmap.CreateFromData to
	Gdk.Pixmap.CreateBitmapFromData

	* gdk/Pixbuf.custom (RenderPixmapAndMask,
	RenderPixmapAndMaskForColormap, RenderThresholdAlpha):
	s/Bitmap/Pixmap/

	* sample/GtkDemo/DemoTextView.cs: uncomment the fg/bg stipple
	code, since that works now

	* parser/gapi-fixup.cs: Add an "add-node" rule. This turned out to
	not actually be needed for this fix, but we know we'll need it
	later, so here it is.

2004-12-03  Jorge Garcia <jgarcia@ac.upc.es>

	* glib/Type.cs:          add Int64 and UInt64 support.
	* glib/TypeConverter.cs: add Int64 and UInt64 support.
	* glib/Value.cs:         add Int64 and UInt64 support.

2004-12-03  Mike Kestner  <mkestner@novell.com>

	* gtk/Dialog.custom : correct return value for AddButton overload.
	[Fixes #70121]

2004-12-03  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : mark accel_group null_ok on ImageMenuItem ctor.
	[Fixes #69041]

2004-12-03  Dan Winship  <danw@novell.com>

	* gtk/Gtk.metadata: Pass TextIters by ref almost everywhere.
	[Fixes #70187]. Kill two varargs warnings.

	* gtk/TextBuffer.custom: Update for that, and also implement
	InsertWithTagsByName

	* sample/GtkDemo/DemoHyperText.cs:
	* sample/GtkDemo/DemoTextView.cs: Remove kludges for broken