@@ -519,19 +519,6 @@ This does not necessarily mean effective visibility. See <see cref="P:Gtk.Action
           <see langword="true" /> if the action and its associated action group are both visible.</remarks>
       </Docs>
     </Member>
-    <Member MemberName="Proxies">
-      <MemberSignature Language="C#" Value="public GLib.SList Proxies { get; };" />
-      <MemberType>Property</MemberType>
-      <ReturnValue>
-        <ReturnType>GLib.SList</ReturnType>
-      </ReturnValue>
-      <Parameters />
-      <Docs>
-        <summary>Returns the proxy widgets for an action.</summary>
-        <returns>a <see cref="T:GLib.SList" /> of proxy widgets.  The list is owned by the action and must not be modified.</returns>
-        <remarks />
-      </Docs>
-    </Member>
     <Member MemberName="AccelPath">
       <MemberSignature Language="C#" Value="public string AccelPath { set; };" />
       <MemberType>Property</MemberType>
@@ -554,6 +541,19 @@ This does not necessarily mean effective visibility. See <see cref="P:Gtk.Action
       <Docs>
         <summary>To be added</summary>
         <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="Proxies">
+      <MemberSignature Language="C#" Value="public Gtk.Widget [] Proxies { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.Widget[]</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Returns the proxy widgets for an action.</summary>
+        <returns>a <see cref="T:Gtk.Widget[]" /> of proxy widgets.</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
