@@ -141,19 +141,6 @@ Accel paths are set to &lt;Actions&gt;/group-name/action-name.
 Therefore you must either set the accel path yourself with <see cref="P:Gtk.Action.AccelPath" />, or use <see cref="M:Gtk.ActionGroup.Add(Gtk.Action,System.String)" />.</remarks>
       </Docs>
     </Member>
-    <Member MemberName="ListActions">
-      <MemberSignature Language="C#" Value="public GLib.List ListActions ();" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>GLib.List</ReturnType>
-      </ReturnValue>
-      <Parameters />
-      <Docs>
-        <summary>Lists the actions in the action group.</summary>
-        <returns>a <see cref="T:GLib.List" /></returns>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
     <Member MemberName=".ctor">
       <MemberSignature Language="C#" Value="protected ActionGroup (GLib.GType gtype);" />
       <MemberType>Constructor</MemberType>
@@ -309,5 +296,18 @@ Therefore you must either set the accel path yourself with <see cref="P:Gtk.Acti
         <remarks />
       </Docs>
     </Member>
+     <Member MemberName="ListActions">
+       <MemberSignature Language="C#" Value="public Gtk.Action[] ListActions ();" />
+       <MemberType>Method</MemberType>
+       <ReturnValue>
+         <ReturnType>Gtk.Action[]</ReturnType>
+       </ReturnValue>
+       <Parameters />
+       <Docs>
+         <summary>Gets a list of the <see cref="T:Gtk.Action" />s in the <see cref="T:Gtk.ActionGroup" />.</summary>
+         <returns>a <see cref="T:Gtk.Action[]" /></returns>
+         <remarks></remarks>
+       </Docs>
+     </Member>
   </Members>
 </Type>
