@@ -215,22 +215,6 @@ The behaviour is chosen based on the "is_important" property of the action to wh
         <remarks>An enclosing &lt;ui&gt; element is added if it is missing.</remarks>
       </Docs>
     </Member>
-    <Member MemberName="GetToplevels">
-      <MemberSignature Language="C#" Value="public GLib.SList GetToplevels (Gtk.UIManagerItemType types);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>GLib.SList</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="types" Type="Gtk.UIManagerItemType" />
-      </Parameters>
-      <Docs>
-        <summary>Obtains a list of all toplevel widgets of the requested types.</summary>
-        <param name="types">a <see cref="T:System.Int32" /></param>
-        <returns>a <see cref="T:GLib.SList" /></returns>
-        <remarks>Allowed types are GTK_UI_MANAGER_MENUBAR, GTK_UI_MANAGER_TOOLBAR and GTK_UI_MANAGER_POPUP.</remarks>
-      </Docs>
-    </Member>
     <Member MemberName="EnsureUpdate">
       <MemberSignature Language="C#" Value="public void EnsureUpdate ();" />
       <MemberType>Method</MemberType>
@@ -439,19 +423,6 @@ The behaviour is chosen based on the "is_important" property of the action to wh
         <remarks />
       </Docs>
     </Member>
-    <Member MemberName="ActionGroups">
-      <MemberSignature Language="C#" Value="public GLib.List ActionGroups { get; };" />
-      <MemberType>Property</MemberType>
-      <ReturnValue>
-        <ReturnType>GLib.List</ReturnType>
-      </ReturnValue>
-      <Parameters />
-      <Docs>
-        <summary>The list of action groups associated with this UIManager.</summary>
-        <returns>a <see cref="T:GLib.List" /></returns>
-        <remarks />
-      </Docs>
-    </Member>
     <Member MemberName="ActionsChanged">
       <MemberSignature Language="C#" Value="public event EventHandler ActionsChanged;" />
       <MemberType>Event</MemberType>
@@ -535,6 +506,35 @@ The behaviour is chosen based on the "is_important" property of the action to wh
         <summary>To be added</summary>
         <returns>a <see cref="T:System.UInt32" /></returns>
         <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="ActionGroups">
+      <MemberSignature Language="C#" Value="public Gtk.ActionGroup [] ActionGroups { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.ActionGroup[]</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>The list of action groups associated with this UIManager.</summary>
+        <returns>a <see cref="T:Gtk.ActionGroup[]" /></returns>
+        <remarks></remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="GetToplevels">
+      <MemberSignature Language="C#" Value="public Gtk.Widget[] GetToplevels (Gtk.UIManagerItemType types);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.Widget[]</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="types" Type="Gtk.UIManagerItemType" />
+      </Parameters>
+      <Docs>
+        <summary>Obtains a list of all toplevel widgets of the requested types.</summary>
+        <param name="types">a <see cref="T:System.Int32" /></param>
+        <returns>a <see cref="T:Gtk.Widget[]" /></returns>
+        <remarks>Allowed types are <see cref="T:Gtk.UIManager.Menubar" />, <see cref="F:Gtk.UIManager.Toolbar" /> and <see cref="F:GTK.UIManager.Popup" />.</remarks>
       </Docs>
     </Member>
   </Members>
