@@ -66,3 +66,15 @@
 			if (changed != null)
 				actions[0].Changed += changed;
 		}
+
+		[DllImport ("libgtk-win32-2.0-0.dll")]
+		static extern IntPtr gtk_action_group_list_actions (IntPtr raw);
+
+		public Gtk.Action[] ListActions() {
+			IntPtr raw_ret = gtk_action_group_list_actions (Handle);
+			GLib.List list = new GLib.List (raw_ret);
+ 			Gtk.Action[] result = new Gtk.Action [list.Count];
+            for (int i = 0; i < list.Count; i++)
+               	result [i] = list [i] as Gtk.Action;
+			return result;
+		}
