@@ -92,6 +92,7 @@
   <attr path="/api/namespace/interface[@cname='GtkTreeSortable']/method[@name='SortColumnChanged']" name="name">ChangeSortColumn</attr>
   <attr path="/api/namespace/object[@cname='GtkAccelLabel']/constructor[@cname='gtk_accel_label_new']/*/*[@name='string']" name="property_name">label</attr>
   <attr path="/api/namespace/object[@cname='GtkAction']/signal[@name='Activate']" name="name">Activated</attr>
+  <attr path="/api/namespace/object[@cname='GtkAction']/method[@name='GetProxies']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='GtkActionGroup']/method[@name='AddAction']" name="name">Add</attr>
   <attr path="/api/namespace/object[@cname='GtkActionGroup']/method[@name='AddActions']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='GtkActionGroup']/method[@name='AddActionsFull']" name="hidden">1</attr>
@@ -100,6 +101,7 @@
   <attr path="/api/namespace/object[@cname='GtkActionGroup']/method[@name='AddRadioActionsFull']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='GtkActionGroup']/method[@name='AddToggleActions']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='GtkActionGroup']/method[@name='AddToggleActionsFull']" name="hidden">1</attr>
+  <attr path="/api/namespace/object[@cname='GtkActionGroup']/method[@name='ListActions']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='GtkActionGroup']/method[@name='RemoveAction']" name="name">Remove</attr>
   <attr path="/api/namespace/object[@cname='GtkAdjustment']/constructor[@cname='gtk_adjustment_new']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='GtkAdjustment']/method[@name='Changed']" name="name">Change</attr>
@@ -348,6 +350,8 @@
   <attr path="/api/namespace/object[@cname='GtkTreeView']/method[@name='SetModel']/*/*[@type='GtkTreeModel*']" name="null_ok">1</attr>
   <attr path="/api/namespace/object[@cname='GtkTreeView']/signal[@name='SetScrollAdjustments']" name="name">ScrollAdjustmentsSet</attr>
   <attr path="/api/namespace/object[@cname='GtkUIManager']/constructor[@cname='gtk_ui_manager_new_merge_id']" name="hidden">1</attr>
+   <attr path="/api/namespace/object[@cname='GtkUIManager']/method[@cname='gtk_ui_manager_get_action_groups']" name="hidden">1</attr>
+   <attr path="/api/namespace/object[@cname='GtkUIManager']/method[@name='GetToplevels']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='GtkViewport']/constructor[@cname='gtk_viewport_new']/*/*[@type='GtkAdjustment*']" name="null_ok">1</attr>
   <attr path="/api/namespace/object[@cname='GtkViewport']/method[@name='SetHadjustment']/*/*[@type='GtkAdjustment*']" name="null_ok">1</attr>
   <attr path="/api/namespace/object[@cname='GtkViewport']/method[@name='SetVadjustment']/*/*[@type='GtkAdjustment*']" name="null_ok">1</attr>
