@@ -1,3 +1,14 @@
+2004-12-06  John Luke  <john.luke@gmail.com>
+
+	* gtk/Action.custom
+	* gtk/ActionGroup.custom
+	* gtk/UIManager.custom
+	* gtk/Gtk.metadata
+	* doc/en/Gtk/ActionGroup.xml
+	* file doc/en/Gtk/Action.xml
+	* doc/en/Gtk/UIManager.xml: replace List and SList with arrays
+	and update the docs
+
 2004-12-06  Mike Kestner  <mkestner@novell.com>
 
 	* generator/SymbolTable.cs : add off_t as an IntPtr.
